--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 Total Anarchy! A Blog!
 
-This is a Ruby on Rails app that will allow you to login and post on a simple, user-unfriendly, blog. You can also comment on blog posts. It also allows for self-doubt; you can edit and delete posts and comments. And because it is so user unfriendly...You can edit and delete any other user's posts!!!!! By using this app you can gauge how bad of a person you are and when people complain that you're an asshole, you can delete their hurtful comments and post using their name. Sweet huh? As an added bonus, unless you give identify yourself in your post, no one will know it's you! Total anarchy!
+This app will allow you to login and post on a simple, user-unfriendly, blog. You can also comment on blog posts. It allows for self-doubt in that you can edit/delete posts and comments AND because it is so user-unfriendly, you can edit and delete any other user's posts!!!!! By using this app you can gauge how bad of a person you are and when people inevitably complain that you're an asshole, you can delete their hurtful comments and post using their name. Sweet huh? As an added bonus, unless you identify yourself in your post, no one will know it's you! Total anarchy!
+
 
 Requires:
   Ruby version 2.2.1
